--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -22,6 +22,7 @@
     "less": "^4.1.1",
     "lodash": "^4.17.20",
     "next": "10.0.6",
+    "numeral": "^2.0.6",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-vis": "^1.11.7",
@@ -30,6 +31,8 @@
     "webpack": "4"
   },
   "devDependencies": {
+    "@types/numeral": "^2.0.0",
+    "@types/react": "^17.0.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.20.0",
     "eslint-config-airbnb": "^18.2.1",
