--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,21 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: ${GITTRENDS_DATABASE_PASSWORD}
       MONGO_INITDB_DATABASE: ${GITTRENDS_DATABASE_DB}
 
+  mongoku:
+    image: huggingface/mongoku:latest
+    container_name: mongoku
+    restart: always
+    ports:
+      - ${GITTRENDS_MONGO_EXPRESS_PORT}:8080
+    volumes:
+      - mongoku-db:/data
+    environment:
+      MONGOKU_SERVER_PORT: 8080
+      MONGOKU_DATABASE_FILE: /data/mongoku.db
+      MONGOKU_DEFAULT_HOST: mongodb://${GITTRENDS_DATABASE_USERNAME}:${GITTRENDS_DATABASE_PASSWORD}@mongo:27017/${GITTRENDS_DATABASE_DB}
+    depends_on:
+      - mongo
+
   redis:
     image: redis:alpine
     container_name: redis
@@ -47,6 +62,8 @@ services:
 
 volumes:
   db:
+    name: gittrends.app
+  mongoku-db:
     name: gittrends.app
   nginx-cache:
     name: nginx.gittrends.app
