--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     container_name: mongoku
     restart: always
     ports:
-      - ${GITTRENDS_MONGO_EXPRESS_PORT}:8080
+      - ${GITTRENDS_MONGOKU_PORT}:8080
     volumes:
       - mongoku-db:/data
     environment:
