--- a/packages/database-config/package.json
+++ b/packages/database-config/package.json
@@ -13,7 +13,7 @@
     "migrate": "ts-node -r @gittrends/env-config node_modules/.bin/migrate-mongo up -f migrate-mongo-config.ts"
   },
   "dependencies": {
-    "ajv": "^7.1.0",
+    "ajv": "7.1.0",
     "ajv-formats": "1.5.1",
     "debug": "^4.3.1",
     "glob": "^7.1.6",
