--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -10,13 +10,17 @@
     "add-repositories": "node -r @gittrends/env-config dist/add-repositories.js",
     "schedule": "node -r @gittrends/env-config dist/scheduler.js",
     "update": "node -r @gittrends/env-config --expose-gc dist/updater.js",
+    "clinic-doctor": "clinic doctor -- node -r @gittrends/env-config --expose-gc dist/updater.js",
+    "clinic-bubbleprof": "clinic bubbleprof -- node -r @gittrends/env-config --expose-gc dist/updater.js",
+    "clinic-flame": "clinic flame -- node -r @gittrends/env-config --expose-gc dist/updater.js",
     "repos-stats": "node -r @gittrends/env-config dist/extra/repos-stats.js",
     "queue-board": "node -r @gittrends/env-config dist/extra/queue-board.js",
     "dev:schedule": "ts-node -r tsconfig-paths/register -r @gittrends/env-config -T scheduler.ts",
     "dev:add-repositories": "ts-node -r tsconfig-paths/register -r @gittrends/env-config -T add-repositories.ts",
     "dev:update": "ts-node -r tsconfig-paths/register -r @gittrends/env-config -T updater.ts",
     "dev:queue-board": "ts-node -r tsconfig-paths/register -r @gittrends/env-config -T extra/queue-board.ts",
-    "dev:repos-stats": "ts-node -r tsconfig-paths/register -r @gittrends/env-config -T extra/repos-stats.ts"
+    "dev:repos-stats": "ts-node -r tsconfig-paths/register -r @gittrends/env-config -T extra/repos-stats.ts",
+    "test": "jest --no-cache"
   },
   "dependencies": {
     "@gittrends/database-config": "file:../database-config",
@@ -41,18 +45,25 @@
     "user-agents": "^1.0.565"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.17",
+    "@babel/preset-env": "^7.12.17",
+    "@babel/preset-typescript": "^7.12.17",
     "@gittrends/env-config": "file:../env-config",
     "@hsborges/github-proxy-server": "^3.2.7",
     "@types/bluebird": "^3.5.33",
     "@types/express": "^4.17.11",
     "@types/ioredis": "^4.19.4",
+    "@types/jest": "^26.0.20",
     "@types/mongodb": "^3.6.7",
     "@types/numeral": "^2.0.0",
     "@types/object-hash": "^1.3.4",
     "@types/promise-retry": "^1.1.3",
     "@types/table": "^6.0.0",
     "@types/user-agents": "^1.0.0",
+    "babel-jest": "^26.6.3",
+    "clinic": "^8.0.1",
     "core-util-is": "^1.0.2",
+    "jest": "^26.6.3",
     "pm2": "^4.5.4",
     "ts-node": "^9.1.1"
   },
