--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -33,6 +33,7 @@
     "commander": "^7.1.0",
     "consola": "^2.15.3",
     "dayjs": "^1.10.4",
+    "debug": "^4.3.1",
     "express": "^4.17.1",
     "ioredis": "^4.22.0",
     "js-yaml": "^4.0.0",
@@ -42,7 +43,7 @@
     "object-hash": "^2.1.1",
     "redis-lru": "^0.6.0",
     "table": "^6.0.7",
-    "user-agents": "^1.0.565"
+    "user-agents": "^1.0.566"
   },
   "devDependencies": {
     "@babel/core": "^7.12.17",
@@ -51,10 +52,11 @@
     "@gittrends/env-config": "file:../env-config",
     "@hsborges/github-proxy-server": "^3.2.7",
     "@types/bluebird": "^3.5.33",
+    "@types/debug": "^4.1.5",
     "@types/express": "^4.17.11",
     "@types/ioredis": "^4.19.4",
     "@types/jest": "^26.0.20",
-    "@types/mongodb": "^3.6.7",
+    "@types/mongodb": "^3.6.8",
     "@types/numeral": "^2.0.0",
     "@types/object-hash": "^1.3.4",
     "@types/promise-retry": "^1.1.3",
