--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -9,10 +9,10 @@
     "proxy-server": "github-proxy-server --api graphql --tokens ../../data/tokens.txt",
     "add-repositories": "node -r @gittrends/env-config dist/add-repositories.js",
     "schedule": "node -r @gittrends/env-config dist/scheduler.js",
-    "update": "node -r @gittrends/env-config --expose-gc dist/updater.js",
-    "clinic-doctor": "clinic doctor -- node -r @gittrends/env-config --expose-gc dist/updater.js",
-    "clinic-bubbleprof": "clinic bubbleprof -- node -r @gittrends/env-config --expose-gc dist/updater.js",
-    "clinic-flame": "clinic flame -- node -r @gittrends/env-config --expose-gc dist/updater.js",
+    "update": "node -r @gittrends/env-config dist/updater.js",
+    "clinic-doctor": "clinic doctor -- node -r @gittrends/env-config dist/updater.js",
+    "clinic-bubbleprof": "clinic bubbleprof -- node -r @gittrends/env-config dist/updater.js",
+    "clinic-flame": "clinic flame -- node -r @gittrends/env-config dist/updater.js",
     "repos-stats": "node -r @gittrends/env-config dist/extra/repos-stats.js",
     "queue-board": "node -r @gittrends/env-config dist/extra/queue-board.js",
     "dev:schedule": "ts-node -r tsconfig-paths/register -r @gittrends/env-config -T scheduler.ts",
