--- a/data/nginx/init-acme.conf
+++ b/data/nginx/init-acme.conf
@@ -5,6 +5,6 @@ server {
     server_name gittrends.app www.gittrends.app;
 
     location /.well-known/acme-challenge/ {
-        root /app/data/acme/www
+        root /app/data/acme/www;
     }
 }
