--- a/data/nginx/default.conf
+++ b/data/nginx/default.conf
@@ -9,7 +9,7 @@ server {
     server_name     gittrends.app www.gittrends.app;
 
     location /.well-known/acme-challenge/ {
-        root /app/data/acme/www
+        root /app/data/acme/www;
     }
 
     location / {
@@ -24,7 +24,7 @@ server {
     server_name     gittrends.app www.gittrends.app;
 
     ssl_certificate     /app/data/acme/certs/gittrends.app/fullchain.pem;
-    ssl_certificate_key /app/data/acme/certs/gittrends.app/privkey.pem;
+    ssl_certificate_key /app/data/acme/certs/gittrends.app/key.pem;
 
     gzip            on;
     gzip_types      text/plain application/xml text/css application/javascript application/json;
