--- a/.env.example
+++ b/.env.example
@@ -33,8 +33,7 @@ GITTRENDS_PROXY_USER_AGENT="My awesome app"
 # website configuration
 GITTRENDS_WEBSITE_HOST=localhost
 GITTRENDS_WEBSITE_PORT=8080
-GITTRENDS_API_HOST=localhost
-GITTRENDS_API_PORT=8888
+GITTRENDS_WEBSITE_DATASOURCE_URL=http://localhost:8888
 
 GITTRENDS_MAIL_TO=
 GITTRENDS_MAIL_HOST=
