--- a/packages/website/.env.local
+++ b/packages/website/.env.local
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_GITHUB_CLIENT_ID=$GITHUB_CLIENT_ID
-NEXT_PUBLIC_GITTRENDS_API_HOST=$GITTRENDS_API_HOST
-NEXT_PUBLIC_GITTRENDS_API_PORT=$GITTRENDS_API_PORT
+NEXT_PUBLIC_GITHUB_REDIRECT_URI=$GITHUB_REDIRECT_URI
+NEXT_PUBLIC_GITTRENDS_WEBSITE_DATASOURCE_URL=$GITTRENDS_WEBSITE_DATASOURCE_URL
