--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -20,6 +20,7 @@
     "add": "^2.0.6",
     "antd": "^4.12.3",
     "axios": "^0.21.1",
+    "dayjs": "^1.10.4",
     "less": "^4.1.1",
     "lodash": "^4.17.20",
     "next": "10.0.7",
@@ -29,6 +30,7 @@
     "react-vis": "^1.11.7",
     "swr": "^0.4.2",
     "universal-cookie": "^4.0.4",
+    "vercel": "^22.0.1",
     "webpack": "4"
   },
   "devDependencies": {
