add fancy progress bar to exporter

--- a/packages/exporter/package.json
+++ b/packages/exporter/package.json
@@ -16,6 +16,8 @@
     "@gittrends/database-config": "file:../database-config",
     "async": "^3.2.0",
     "bluebird": "^3.7.2",
+    "cli-progress": "^3.9.0",
+    "colors": "^1.4.0",
     "commander": "^7.2.0",
     "consola": "^2.15.3",
     "lodash": "^4.17.19",
@@ -24,6 +26,7 @@
   },
   "devDependencies": {
     "@types/async": "^3.2.6",
+    "@types/cli-progress": "^3.9.1",
     "@types/mkdirp": "^1.0.1",
     "ts-node-dev": "^1.1.6",
     "tsconfig-paths": "^3.9.0"
