--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "url": "https://github.com/hsborges/gittrends-repository.git"
   },
   "scripts": {
-    "build": "yarn workspaces run build && yarn install --force"
+    "install": "yarn workspaces run install",
+    "build": "yarn workspaces run build"
   },
   "type": "commonjs",
   "engines": {
