--- a/packages/service/Dockerfile
+++ b/packages/service/Dockerfile
@@ -17,7 +17,7 @@ WORKDIR /app/packages/database-config
 RUN yarn install && yarn build
 
 WORKDIR /app/packages/service
-RUN yarn install && yarn build
+RUN yarn install --force && yarn build
 
 WORKDIR /app/packages/service
 EXPOSE 3000 8000-8010
