--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -9,39 +9,39 @@
     "start": "node -r tsconfig-paths/register -r @gittrends/env-config ./node_modules/.bin/next start"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.5.0",
-    "@fortawesome/fontawesome-svg-core": "^1.2.34",
-    "@fortawesome/free-brands-svg-icons": "^5.15.2",
-    "@fortawesome/free-regular-svg-icons": "^5.15.2",
-    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@ant-design/icons": "^4.6.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.35",
+    "@fortawesome/free-brands-svg-icons": "^5.15.3",
+    "@fortawesome/free-regular-svg-icons": "^5.15.3",
+    "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "add": "^2.0.6",
-    "antd": "^4.12.3",
+    "antd": "^4.16.1",
     "axios": "^0.21.1",
-    "dayjs": "^1.10.4",
+    "dayjs": "^1.10.5",
     "less": "^4.1.1",
-    "lodash": "^4.17.20",
-    "next": "10.0.7",
+    "lodash": "^4.17.21",
+    "next": "10.2.3",
     "numeral": "^2.0.6",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-vis": "^1.11.7",
-    "swr": "^0.4.2",
+    "swr": "^0.5.6",
     "universal-cookie": "^4.0.4",
-    "vercel": "^22.0.1",
-    "webpack": "4"
+    "vercel": "^23.0.0"
   },
   "devDependencies": {
-    "@types/numeral": "^2.0.0",
-    "@types/react": "^17.0.2",
+    "@types/numeral": "^2.0.1",
+    "@types/react": "^17.0.8",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.20.0",
+    "eslint": "^7.27.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.22.0",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "webpack": "4"
   }
 }
