--- a/docker-compose.mongo.yml
+++ b/docker-compose.mongo.yml
@@ -27,7 +27,7 @@ services:
     environment:
       MONGOKU_SERVER_PORT: 8080
       MONGOKU_DATABASE_FILE: /data/mongoku.db
-      MONGOKU_DEFAULT_HOST: mongodb://${GITTRENDS_DATABASE_USERNAME}:${GITTRENDS_DATABASE_PASSWORD}@mongo:27017
+      MONGOKU_DEFAULT_HOST: mongodb://${GITTRENDS_DATABASE_USERNAME}:${GITTRENDS_DATABASE_PASSWORD}@mongo:${GITTRENDS_DATABASE_PORT}
     depends_on:
       - mongo
 
