--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -39,8 +39,8 @@
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
     "mongodb": "^3.6.9",
+    "node-object-hash": "^2.3.3",
     "numeral": "^2.0.6",
-    "object-hash": "^2.2.0",
     "redis-lru": "^0.6.0",
     "table": "^6.7.1",
     "user-agents": "^1.0.670"
@@ -58,7 +58,6 @@
     "@types/jest": "^26.0.23",
     "@types/mongodb": "^3.6.17",
     "@types/numeral": "^2.0.1",
-    "@types/object-hash": "^2.1.0",
     "@types/promise-retry": "^1.1.3",
     "@types/table": "^6.3.2",
     "@types/user-agents": "^1.0.1",
