--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -41,6 +41,7 @@
     "mongodb": "^3.6.9",
     "node-object-hash": "^2.3.3",
     "numeral": "^2.0.6",
+    "promise-retry": "^2.0.1",
     "redis-lru": "^0.6.0",
     "table": "^6.7.1",
     "user-agents": "^1.0.670"
