--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -10,9 +10,8 @@
   },
   "dependencies": {
     "@ajna/pagination": "^1.4.13",
-    "@ant-design/icons": "^4.6.2",
+    "@chakra-ui/gatsby-plugin": "^2.0.1",
     "@chakra-ui/react": "^1.6.6",
-    "@choc-ui/chakra-autocomplete": "^4.5.5",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
@@ -20,32 +19,20 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.60",
-    "@material-ui/styles": "^4.11.4",
-    "@zeit/next-css": "^1.0.1",
-    "@zeit/next-less": "^1.0.1",
     "add": "^2.0.6",
-    "antd": "^4.16.11",
     "axios": "^0.21.1",
-    "bootstrap": "5.0.2",
-    "chakra-ui-simple-autocomplete": "^0.7.0",
     "classnames": "^2.3.1",
     "dayjs": "^1.10.6",
     "framer-motion": "^4",
-    "less": "^4.1.1",
     "lodash": "^4.17.21",
     "next": "10",
     "numeral": "^2.0.6",
     "react": "17.0.2",
-    "react-bootstrap": "^2.0.0-beta.4",
     "react-detect-click-outside": "^1.1.1",
     "react-dom": "17.0.2",
     "react-vis": "^1.11.7",
     "swr": "^0.5.6",
     "universal-cookie": "^4.0.4",
-    "url-parse": "^1.5.3",
     "vercel": "^23.1.2"
   },
   "devDependencies": {
