--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -25,7 +25,7 @@
     "dayjs": "^1.10.6",
     "framer-motion": "^4",
     "lodash": "^4.17.21",
-    "next": "10",
+    "next": "11.1.0",
     "numeral": "^2.0.6",
     "react": "17.0.2",
     "react-detect-click-outside": "^1.1.1",
@@ -36,17 +36,18 @@
     "vercel": "^23.1.2"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^11.1.0",
     "@types/numeral": "^2.0.1",
-    "@types/react": "^17.0.16",
+    "@types/react": "^17.0.19",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.24.0",
+    "eslint-plugin-import": "^2.24.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "sass": "^1.38.0",
     "styled-jsx-plugin-sass": "^1.0.0",
-    "webpack": "4"
+    "webpack": "5.51.1"
   }
 }
