--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -9,23 +9,26 @@
     "start": "node -r tsconfig-paths/register -r @gittrends/env-config ./node_modules/.bin/next start"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.6.2",
+    "@ajna/pagination": "^1.4.13",
+    "@chakra-ui/gatsby-plugin": "^2.0.1",
+    "@chakra-ui/react": "^1.6.6",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.15",
-    "@zeit/next-css": "^1.0.1",
-    "@zeit/next-less": "^1.0.1",
     "add": "^2.0.6",
-    "antd": "^4.16.11",
     "axios": "^0.21.1",
+    "classnames": "^2.3.1",
     "dayjs": "^1.10.6",
-    "less": "^4.1.1",
+    "framer-motion": "^4",
     "lodash": "^4.17.21",
-    "next": "10",
+    "next": "11.1.0",
     "numeral": "^2.0.6",
     "react": "17.0.2",
+    "react-detect-click-outside": "^1.1.1",
     "react-dom": "17.0.2",
     "react-vis": "^1.11.7",
     "swr": "^0.5.6",
@@ -33,15 +36,18 @@
     "vercel": "^23.1.2"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^11.1.0",
     "@types/numeral": "^2.0.1",
-    "@types/react": "^17.0.16",
+    "@types/react": "^17.0.19",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.24.0",
+    "eslint-plugin-import": "^2.24.1",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "webpack": "4"
+    "sass": "^1.38.0",
+    "styled-jsx-plugin-sass": "^1.0.0",
+    "webpack": "5.51.1"
   }
 }
