--- a/research/locations/package.json
+++ b/research/locations/package.json
@@ -5,7 +5,10 @@
   "license": "MIT",
   "scripts": {
     "build": "rm -rf dist && yarn tsc",
-    "dev:update-locations": "ts-node-dev -r tsconfig-paths/register -r @gittrends/env-config -T update-locations.ts"
+    "dev:update-locations": "ts-node-dev -r tsconfig-paths/register -r @gittrends/env-config -T update-locations.ts",
+    "dev:export-rankings": "ts-node-dev -r tsconfig-paths/register -r @gittrends/env-config -T export-rankings.ts",
+    "update-locations": "node -r @gittrends/env-config dist/update-locations.js",
+    "export-rankings": "node -r @gittrends/env-config dist/export-rankings.js"
   },
   "dependencies": {
     "@gittrends/database-config": "file:../../packages/database-config",
