--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -27,7 +27,7 @@
     "axios": "^0.21.1",
     "bluebird": "^3.7.2",
     "bull-board": "^2.1.3",
-    "bullmq": "^1.43.0",
+    "bullmq": "^1.44.0",
     "chalk": "^4.1.2",
     "collections": "^5.1.12",
     "commander": "^8.1.0",
@@ -51,7 +51,7 @@
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-typescript": "^7.15.0",
     "@gittrends/env-config": "file:../env-config",
-    "@hsborges/github-proxy-server": "^3.2.10",
+    "@hsborges/github-proxy-server": "^3.2.11",
     "@types/bluebird": "^3.5.36",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
@@ -67,7 +67,8 @@
     "core-util-is": "^1.0.2",
     "jest": "^27.0.6",
     "pm2": "^5.1.1",
-    "ts-node": "^10.2.1"
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.2"
   },
   "config": {
     "resources": [
