--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -35,6 +35,7 @@
     "dayjs": "^1.10.6",
     "debug": "^4.3.2",
     "express": "^4.17.1",
+    "graphql-query-compress": "^1.2.4",
     "ioredis": "^4.27.8",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
