--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -25,9 +25,9 @@
   "dependencies": {
     "@gittrends/database-config": "file:../database-config",
     "axios": "^0.21.1",
+    "bee-queue": "^1.4.0",
     "bluebird": "^3.7.2",
-    "bull-board": "^2.1.3",
-    "bullmq": "^1.44.1",
+    "bull-arena": "^3.29.2",
     "chalk": "^4.1.2",
     "collections": "^5.1.12",
     "commander": "^8.1.0",
@@ -54,6 +54,7 @@
     "@gittrends/env-config": "file:../env-config",
     "@hsborges/github-proxy-server": "^3.2.13",
     "@types/bluebird": "^3.5.36",
+    "@types/bull-arena": "^3.0.4",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
     "@types/ioredis": "^4.27.1",
