--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,33 +7,35 @@ services:
     restart: always
     command: --wiredTigerCacheSizeGB 1 --wiredTigerJournalCompressor zstd --directoryperdb --auth
     ports:
-      - ${GITTRENDS_DATABASE_PORT}:27017
+      - ${GITTRENDS_DATABASE_PORT-27017}:27017
     volumes:
       - db:/data/db
     environment:
-      MONGO_INITDB_ROOT_USERNAME: ${GITTRENDS_DATABASE_USERNAME}
-      MONGO_INITDB_ROOT_PASSWORD: ${GITTRENDS_DATABASE_PASSWORD}
-      MONGO_INITDB_DATABASE: ${GITTRENDS_DATABASE_DB}
+      MONGO_INITDB_ROOT_USERNAME: ${GITTRENDS_DATABASE_USERNAME-}
+      MONGO_INITDB_ROOT_PASSWORD: ${GITTRENDS_DATABASE_PASSWORD-}
+      MONGO_INITDB_DATABASE: ${GITTRENDS_DATABASE_DB-}
 
   redis:
     image: redis:alpine
     container_name: redis
     restart: always
     ports:
-      - ${GITTRENDS_REDIS_PORT}:6379
+      - ${GITTRENDS_REDIS_PORT-6379}:6379
     command: --maxmemory 100mb --maxmemory-policy allkeys-lru
 
   proxy-server:
-    image: node:alpine
+    extends:
+      file: docker-compose.service.yml
+      service: service
     container_name: gittrends-proxy-server
-    entrypoint: npx @hsborges/github-proxy-server --tokens tokens.txt --request-interval 250
+    entrypoint: npx @hsborges/github-proxy-server --tokens /tokens.txt --request-interval 250
     restart: unless-stopped
     volumes:
-      - ./data/tokens.dev.txt:/tokens.txt:ro
+      - ./data/tokens.txt:/tokens.txt:ro
     ports:
-      - 3000:3000
+      - ${GITTRENDS_PROXY_PORT-8081}:80
     environment:
-      PORT: 3000
+      PORT: 80
 
   queue-board:
     extends:
@@ -42,8 +44,10 @@ services:
     container_name: gittrends-service-queue-board
     restart: unless-stopped
     command: yarn queue-board
+    environment:
+      GITTRENDS_QUEUE_BOARD_PORT: 80
     ports:
-      - ${GITTRENDS_QUEUE_BOARD_PORT}:${GITTRENDS_QUEUE_BOARD_PORT}
+      - ${GITTRENDS_QUEUE_BOARD_PORT-8082}:80
     depends_on:
       - redis
 
@@ -64,6 +68,8 @@ services:
     container_name: gittrends-service-updater
     restart: unless-stopped
     command: yarn update --type repositories --workers 1
+    environment:
+      GITTRENDS_DATABASE_POOL_SIZE: ${GITTRENDS_DATABASE_POOL_SIZE-1}
     depends_on:
       - mongo
       - redis
@@ -76,6 +82,8 @@ services:
     container_name: gittrends-service-users-updater
     restart: unless-stopped
     command: yarn update --type users --workers 1
+    environment:
+      GITTRENDS_DATABASE_POOL_SIZE: ${GITTRENDS_DATABASE_POOL_SIZE-1}
     depends_on:
       - mongo
       - redis
