--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -43,7 +43,7 @@
     "mongodb": "^4.1.1",
     "node-object-hash": "^2.3.9",
     "numeral": "^2.0.6",
-    "promise-retry": "^2.0.1",
+    "p-retry": "^4.6.1",
     "redis-lru": "^0.6.0",
     "table": "^6.7.1",
     "user-agents": "^1.0.771"
