--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -20,7 +20,8 @@
     "dev:update": "ts-node -r tsconfig-paths/register -r @gittrends/env-config -T updater.ts",
     "dev:queue-board": "ts-node -r tsconfig-paths/register -r @gittrends/env-config -T extra/queue-board.ts",
     "dev:repos-stats": "ts-node -r tsconfig-paths/register -r @gittrends/env-config -T extra/repos-stats.ts",
-    "test": "jest --no-cache"
+    "test": "node -r @gittrends/env-config node_modules/.bin/jest",
+    "jest": "node -r @gittrends/env-config node_modules/.bin/jest"
   },
   "dependencies": {
     "@bull-board/api": "^3.5.4",
@@ -42,10 +43,10 @@
     "mongodb": "^4.1.1",
     "node-object-hash": "^2.3.9",
     "numeral": "^2.0.6",
-    "p-retry": "^4.6.1",
+    "promise-retry": "^2.0.1",
     "redis-lru": "^0.6.0",
     "table": "^6.7.1",
-    "user-agents": "^1.0.772"
+    "user-agents": "^1.0.773"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
@@ -61,12 +62,17 @@
     "@types/jest": "^27.0.1",
     "@types/mongodb": "^4.0.7",
     "@types/numeral": "^2.0.1",
+    "@types/promise-retry": "^1.1.3",
     "@types/table": "^6.3.2",
     "@types/user-agents": "^1.0.2",
-    "babel-jest": "^27.1.1",
+    "@typescript-eslint/eslint-plugin": "4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
+    "babel-jest": "^27.2.0",
     "clinic": "^9.0.0",
     "core-util-is": "^1.0.3",
-    "jest": "^27.1.1",
+    "get-port": "^5.1.1",
+    "jest": "^27.2.0",
+    "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   },
