--- a/packages/service/package.json
+++ b/packages/service/package.json
@@ -33,6 +33,7 @@
     "chalk": "^4.1.2",
     "commander": "^8.2.0",
     "consola": "^2.15.3",
+    "cron": "^1.8.2",
     "dayjs": "^1.10.7",
     "debug": "^4.3.2",
     "express": "^4.17.1",
@@ -56,6 +57,7 @@
     "@hsborges/github-proxy-server": "^4.1.2",
     "@types/bluebird": "^3.5.36",
     "@types/bull": "^3.15.4",
+    "@types/cron": "^1.7.3",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
     "@types/ioredis": "^4.27.2",
