chore(docker): improve docker files

--- a/.env.example
+++ b/.env.example
@@ -52,3 +52,11 @@ GITTRENDS_WRITE_BATCH_SIZE=1000
 GITTRENDS_QUEUE_ATTEMPS=1
 GITTRENDS_MONGOKU_PORT=8081
 GITTRENDS_QUEUE_BOARD_PORT=8083
+
+GITTRENDS_DATABASE_CACHE_SIZE=1
+GITTRENDS_REDIS_MAX_MEMORY=50
+GITTRENDS_PROXY_TOKENS_FILE=./tokens.txt
+GITTRENDS_SCHEDULER_CRON=0 */6 * * *
+GITTRENDS_UPDATER_REPOS_WORKERS=25
+GITTRENDS_UPDATER_USERS_WORKERS=1
+GITTRENDS_MONGODUMP_CRON_SCHEDULE=0 0 * * 1
