--- a/packages/website-api/tsconfig.json
+++ b/packages/website-api/tsconfig.json
@@ -7,6 +7,9 @@
       /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
       "@gittrends/*": ["packages/*"]
     },
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "esModuleInterop": true
   }
 }
