--- a/packages/website-api/tsconfig.json
+++ b/packages/website-api/tsconfig.json
@@ -7,9 +7,6 @@
       /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
       "@gittrends/*": ["packages/*"]
     },
-    "resolveJsonModule": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "esModuleInterop": true
+    "resolveJsonModule": true
   }
 }
