refactor(website-api): finish migration to express+sqlite of website-api package

--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -4,3 +4,5 @@ singleQuote: true
 trailingComma: 'none'
 arrowParens: 'always'
 printWidth: 100
+importOrderSeparation: true
+importOrder: ["^@gittrends/(.*)$", "^[./]"]
