--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -6,9 +6,11 @@
     "dev": "node -r tsconfig-paths/register -r @gittrends/env-config ./node_modules/.bin/next dev",
     "build": "node -r tsconfig-paths/register -r @gittrends/env-config ./node_modules/.bin/next build",
     "export": "node -r tsconfig-paths/register -r @gittrends/env-config ./node_modules/.bin/next export",
-    "start": "node -r tsconfig-paths/register -r @gittrends/env-config ./node_modules/.bin/next start"
+    "start": "node -r tsconfig-paths/register -r @gittrends/env-config ./node_modules/.bin/next start",
+    "prettier": "prettier --write --config ../../.prettierrc.yml --ignore-path ../../.prettierignore  '**/*.{ts,tsx}'"
   },
   "dependencies": {
+    "@gittrends/website-api": "file:../website-api",
     "@ajna/pagination": "^1.4.13",
     "@chakra-ui/gatsby-plugin": "^2.0.1",
     "@chakra-ui/react": "^1.6.7",
