--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "node": ">=14.0.0"
   },
   "workspaces": [
-    "packages/*"
+    "packages/*", "research/*"
   ],
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^2.0.4",
