refactor(project): rename environment variables

--- a/.env.example
+++ b/.env.example
@@ -1,62 +1,48 @@
 # gittrends database
-GITTRENDS_DATABASE_HOST=localhost
-GITTRENDS_DATABASE_PORT=27017
-GITTRENDS_DATABASE_DB=gittrends_app-development
-GITTRENDS_DATABASE_USERNAME=root
-GITTRENDS_DATABASE_PASSWORD=root
-GITTRENDS_DATABASE_POOL_SIZE=10
-# gittrends database over ssh tunel
-GITTRENDS_TUNEL_HOST=
-GITTRENDS_TUNEL_PORT=22
-GITTRENDS_TUNEL_USERNAME=
-GITTRENDS_TUNEL_PASSWORD=
-GITTRENDS_TUNEL_PRIVATE_KEY=
-GITTRENDS_TUNEL_PASSPHRASE=
-GITTRENDS_TUNEL_DST_HOST=
-GITTRENDS_TUNEL_DST_PORT=
-GITTRENDS_TUNEL_LOCAL_HOST=
-GITTRENDS_TUNEL_LOCAL_PORT=
-GITTRENDS_TUNEL_READY_TIMEOUT=60000
+GT_DATABASE_HOST=localhost
+GT_DATABASE_PORT=27017
+GT_DATABASE_DB=gittrends_app-development
+GT_DATABASE_USERNAME=root
+GT_DATABASE_PASSWORD=root
+GT_DATABASE_POOL_SIZE=10
 
 # redis - caching and messaging queue
-GITTRENDS_REDIS_HOST=localhost
-GITTRENDS_REDIS_PORT=6379
-GITTRENDS_REDIS_DB=0
+GT_REDIS_HOST=localhost
+GT_REDIS_PORT=6379
+GT_REDIS_DB=0
 
 # github proxy configuration
-GITTRENDS_PROXY_PROTOCOL=http
-GITTRENDS_PROXY_HOST=localhost
-GITTRENDS_PROXY_PORT=3000
-GITTRENDS_PROXY_TIMEOUT=20000
-GITTRENDS_PROXY_USER_AGENT="My awesome app"
-GITTRENDS_PROXY_RETRIES=0
+GT_PROXY_PROTOCOL=http
+GT_PROXY_HOST=localhost
+GT_PROXY_PORT=3000
+GT_PROXY_TIMEOUT=20000
+GT_PROXY_USER_AGENT="My awesome app"
+GT_PROXY_RETRIES=0
 
 # website configuration
-GITTRENDS_WEBSITE_HOST=localhost
-GITTRENDS_WEBSITE_PORT=8080
-GITTRENDS_WEBSITE_DATASOURCE_URL=http://localhost:8888
+GT_WEBSITE_HOST=localhost
+GT_WEBSITE_PORT=8080
+GT_WEBSITE_API_PRISMA_URL=file:/tmp/gittrends.app.sqlite
+GT_WEBSITE_API_URL=http://localhost:8888
 
-GITTRENDS_MAIL_TO=
-GITTRENDS_MAIL_HOST=
-GITTRENDS_MAIL_PORT=
-GITTRENDS_MAIL_USER=
-GITTRENDS_MAIL_PASS=
+GT_MAIL_TO=
+GT_MAIL_HOST=
+GT_MAIL_PORT=
+GT_MAIL_USER=
+GT_MAIL_PASS=
 
 GITHUB_CLIENT_ID=
 GITHUB_SECRET_ID=
 GITHUB_REDIRECT_URI=
 
 # other
-GITTRENDS_CACHE_SIZE=50000
-GITTRENDS_WRITE_BATCH_SIZE=1000
-GITTRENDS_QUEUE_ATTEMPS=1
-GITTRENDS_MONGOKU_PORT=8081
-GITTRENDS_QUEUE_BOARD_PORT=8083
+GT_CACHE_SIZE=50000
+GT_QUEUE_BOARD_PORT=8081
 
-GITTRENDS_DATABASE_CACHE_SIZE=1
-GITTRENDS_REDIS_MAX_MEMORY=50
-GITTRENDS_PROXY_TOKENS_FILE=./tokens.txt
-GITTRENDS_SCHEDULER_CRON=0 */6 * * *
-GITTRENDS_UPDATER_REPOS_WORKERS=25
-GITTRENDS_UPDATER_USERS_WORKERS=1
-GITTRENDS_MONGODUMP_CRON_SCHEDULE=0 0 * * 1
+GT_DATABASE_CACHE_SIZE=1
+GT_REDIS_MAX_MEMORY=50
+GT_PROXY_TOKENS_FILE=./tokens.txt
+GT_SCHEDULER_CRON=0 */6 * * *
+GT_UPDATER_REPOS_WORKERS=25
+GT_UPDATER_USERS_WORKERS=1
+GT_MONGODUMP_CRON_SCHEDULE=0 0 * * 1
