--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,23 +3,23 @@ version: '3.7'
 services:
   mongo:
     image: mongo:latest
-    command: --wiredTigerCacheSizeGB ${GITTRENDS_DATABASE_CACHE_SIZE-1} --wiredTigerJournalCompressor zstd --directoryperdb --auth
+    command: --wiredTigerCacheSizeGB ${GT_DATABASE_CACHE_SIZE-1} --wiredTigerJournalCompressor zstd --directoryperdb --auth
     restart: always
     ports:
-      - ${GITTRENDS_DATABASE_PORT-27017}:27017
+      - ${GT_DATABASE_PORT-27017}:27017
     volumes:
       - db:/data/db
     environment:
-      MONGO_INITDB_ROOT_USERNAME: ${GITTRENDS_DATABASE_USERNAME-}
-      MONGO_INITDB_ROOT_PASSWORD: ${GITTRENDS_DATABASE_PASSWORD-}
-      MONGO_INITDB_DATABASE: ${GITTRENDS_DATABASE_DB-}
+      MONGO_INITDB_ROOT_USERNAME: ${GT_DATABASE_USERNAME-}
+      MONGO_INITDB_ROOT_PASSWORD: ${GT_DATABASE_PASSWORD-}
+      MONGO_INITDB_DATABASE: ${GT_DATABASE_DB-}
 
   redis:
     image: redis:alpine
-    command: --maxmemory ${GITTRENDS_REDIS_MAX_MEMORY-50}mb --maxmemory-policy allkeys-lru
+    command: --maxmemory ${GT_REDIS_MAX_MEMORY-50}mb --maxmemory-policy allkeys-lru
     restart: always
     ports:
-      - ${GITTRENDS_REDIS_PORT-6379}:6379
+      - ${GT_REDIS_PORT-6379}:6379
 
   proxy-server:
     build:
@@ -29,9 +29,9 @@ services:
     entrypoint: yarn github-proxy-server --tokens /tokens.txt --request-interval 250
     restart: unless-stopped
     volumes:
-      - ./${GITTRENDS_PROXY_TOKENS_FILE-./tokens.txt}:/tokens.txt:ro
+      - ./${GT_PROXY_TOKENS_FILE-./tokens.txt}:/tokens.txt:ro
     ports:
-      - ${GITTRENDS_PROXY_PORT-8081}:80
+      - ${GT_PROXY_PORT-8081}:80
     environment:
       PORT: 80
 
@@ -43,11 +43,11 @@ services:
     command: yarn queue-board
     restart: unless-stopped
     ports:
-      - ${GITTRENDS_QUEUE_BOARD_PORT-8082}:80
+      - ${GT_QUEUE_BOARD_PORT-8082}:80
     environment:
-      GITTRENDS_REDIS_HOST: redis
-      GITTRENDS_REDIS_PORT: 6379
-      GITTRENDS_QUEUE_BOARD_PORT: 80
+      GT_REDIS_HOST: redis
+      GT_REDIS_PORT: 6379
+      PORT: 80
     depends_on:
       - redis
 
@@ -56,15 +56,15 @@ services:
       context: .
       dockerfile: packages/service/Dockerfile
     image: gittrends-service:latest
-    command: yarn schedule all --wait 48 --cron "${GITTRENDS_SCHEDULER_CRON-0 */6 * * *}"
+    command: yarn schedule all --wait 48 --cron "${GT_SCHEDULER_CRON-0 */6 * * *}"
     restart: unless-stopped
     env_file:
       - .env
     environment:
-      GITTRENDS_DATABASE_HOST: mongo
-      GITTRENDS_DATABASE_PORT: 27017
-      GITTRENDS_REDIS_HOST: redis
-      GITTRENDS_REDIS_PORT: 6379
+      GT_DATABASE_HOST: mongo
+      GT_DATABASE_PORT: 27017
+      GT_REDIS_HOST: redis
+      GT_REDIS_PORT: 6379
     depends_on:
       - mongo
       - redis
@@ -74,17 +74,17 @@ services:
       context: .
       dockerfile: packages/service/Dockerfile
     image: gittrends-service:latest
-    command: yarn update --type repositories --workers ${GITTRENDS_UPDATER_REPOS_WORKERS-1}
+    command: yarn update --type repositories --workers ${GT_UPDATER_REPOS_WORKERS-1}
     restart: unless-stopped
     env_file:
       - .env
     environment:
-      GITTRENDS_DATABASE_HOST: mongo
-      GITTRENDS_DATABASE_PORT: 27017
-      GITTRENDS_REDIS_HOST: redis
-      GITTRENDS_REDIS_PORT: 6379
-      GITTRENDS_PROXY_HOST: proxy-server
-      GITTRENDS_PROXY_PORT: 80
+      GT_DATABASE_HOST: mongo
+      GT_DATABASE_PORT: 27017
+      GT_REDIS_HOST: redis
+      GT_REDIS_PORT: 6379
+      GT_PROXY_HOST: proxy-server
+      GT_PROXY_PORT: 80
     depends_on:
       - mongo
       - redis
@@ -95,17 +95,17 @@ services:
       context: .
       dockerfile: packages/service/Dockerfile
     image: gittrends-service:latest
-    command: yarn update --type users --workers ${GITTRENDS_UPDATER_USERS_WORKERS-1}
+    command: yarn update --type users --workers ${GT_UPDATER_USERS_WORKERS-1}
     restart: unless-stopped
     env_file:
       - .env
     environment:
-      GITTRENDS_DATABASE_HOST: mongo
-      GITTRENDS_DATABASE_PORT: 27017
-      GITTRENDS_REDIS_HOST: redis
-      GITTRENDS_REDIS_PORT: 6379
-      GITTRENDS_PROXY_HOST: proxy-server
-      GITTRENDS_PROXY_PORT: 80
+      GT_DATABASE_HOST: mongo
+      GT_DATABASE_PORT: 27017
+      GT_REDIS_HOST: redis
+      GT_REDIS_PORT: 6379
+      GT_PROXY_HOST: proxy-server
+      GT_PROXY_PORT: 80
     depends_on:
       - mongo
       - redis
