--- a/packages/database-config/package.json
+++ b/packages/database-config/package.json
@@ -7,22 +7,19 @@
   "private": true,
   "scripts": {
     "build": "rm -rf dist && yarn tsc",
-    "migrate:create": "sh -c 'ts-node node_modules/.bin/migrate-mongo create $0 -f migrate-mongo-config.ts' ",
-    "migrate:status": "ts-node -r @gittrends/env-config node_modules/.bin/migrate-mongo status -f migrate-mongo-config.ts",
-    "migrate:undo-last": "ts-node -r @gittrends/env-config node_modules/.bin/migrate-mongo down -f migrate-mongo-config.ts && npm run migrate:status",
-    "migrate": "ts-node -r @gittrends/env-config node_modules/.bin/migrate-mongo up -f migrate-mongo-config.ts",
+    "migrate:create": "sh -c 'ts-node node_modules/.bin/migrate-mongo create $0 -f migrate-mongo.ts' ",
+    "migrate:status": "ts-node -r @gittrends/env-config node_modules/.bin/migrate-mongo status -f migrate-mongo.ts",
+    "migrate:undo-last": "ts-node -r @gittrends/env-config node_modules/.bin/migrate-mongo down -f migrate-mongo.ts && npm run migrate:status",
+    "migrate": "ts-node -r @gittrends/env-config node_modules/.bin/migrate-mongo up -f migrate-mongo.ts",
     "prettier": "prettier --write --config ../../.prettierrc.yml --ignore-path ../../.prettierignore  '**/*.ts'"
   },
   "dependencies": {
-    "ajv": "8.5",
-    "ajv-formats": "2.1.1",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "es6-shim": "^0.35.6",
     "migrate-mongo": "^8.2.3",
     "mongodb": "4.1.1",
-    "reflect-metadata": "^0.1.13",
-    "tunnel-ssh": "^4.1.4"
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@gittrends/env-config": "file:../env-config",
@@ -30,7 +27,6 @@
     "@types/es6-shim": "^0.31.42",
     "@types/jest": "^27.0.2",
     "@types/mongodb": "^4.0.7",
-    "@types/tunnel-ssh": "^4.1.1",
     "jest": "^27.3.1",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.2.1"
