--- a/packages/website-api/package.json
+++ b/packages/website-api/package.json
@@ -41,8 +41,10 @@
   },
   "devDependencies": {
     "@gittrends/env-config": "file:../env-config",
+    "@types/async": "^3.2.9",
     "@types/aws-lambda": "^8.10.83",
     "@types/body-parser": "^1.19.1",
+    "@types/cli-progress": "^3.9.2",
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
