--- a/packages/website/.env.local
+++ b/packages/website/.env.local
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_GITHUB_CLIENT_ID=$GITHUB_CLIENT_ID
-NEXT_PUBLIC_GITHUB_REDIRECT_URI=$GITHUB_REDIRECT_URI
-NEXT_PUBLIC_GITTRENDS_WEBSITE_DATASOURCE_URL=$GITTRENDS_WEBSITE_DATASOURCE_URL
+NEXT_PUBLIC_GH_CLIENT_ID=$GITHUB_CLIENT_ID
+NEXT_PUBLIC_GH_REDIRECT_URI=$GITHUB_REDIRECT_URI
+NEXT_PUBLIC_GT_WEBSITE_API_URL=$GT_WEBSITE_API_URL
