--- a/packages/env-config/package.json
+++ b/packages/env-config/package.json
@@ -5,8 +5,8 @@
   "types": "dist/index.d.ts",
   "license": "MIT",
   "scripts": {
-    "build": "yarn clean && yarn tsc",
-    "clean": "rm -rf dist"
+    "build": "rm -rf dist && yarn tsc",
+    "prettier": "prettier --write --config ../../.prettierrc.yml --ignore-path ../../.prettierignore  '**/*.ts'"
   },
   "dependencies": {
     "dotenv": "^10.0.0",
